# intermediate-layer-generalization

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/CIFAR/: few-shot.ipynb  layer-sensitivity.ipynb  zero-shot.ipynb
examples/CelebA-Waterbirds/: zero-shot.ipynb
intermediate_gen/: datasets.py  intermediate_probe_model.py  utils.py
