[tool.poetry]
name = "intermediate-generalization"
version = "0.1.0"
description = ""
authors = ["oshapio <auselis@gmx.com>"]
readme = "README.md"
packages = [{include = "intermediate_gen"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
